--- a/index.html
+++ b/index.html
@@ -58,10 +58,7 @@ jre_header_c('http://www.jreast.co.jp/','600');
 -->
 <script type="text/javascript">
 jre_header_c('https://traininfo.jreast.co.jp/delay_certificate/','600');
-</script><table border="0" cellpadding="0" cellspacing="0" width="600"><tbody><tr><td><a href="http://www.jreast.co.jp/"><img src="./JR東日本：遅延証明書_files/jr_logo.jpg" width="263" height="48" border="0" alt="JR東日本"></a></td><td align="right"><a href="javascript:window.close();" onmouseover="imageOn(&#39;b_close&#39;);" onmouseout="imageOff(&#39;b_close&#39;);"><img src="./JR東日本：遅延証明書_files/b_close_01.gif" width="55" height="17" border="0" alt="閉じる" name="b_close"></a><img src="./JR東日本：遅延証明書_files/_.gif" width="10" height="1" border="0" alt=""></td></tr><tr><td colspan="2" background="./JR東日本：遅延証明書_files/line_header_ber.gif" align="right"><img src="./JR東日本：遅延証明書_files/line_header_ber_c.gif" width="8" height="6" border="0" alt=""></td></tr></tbody></table>
-<noscript>
-<p>このページはjavascriptを使用しています</p>
-</noscript>
+</script>
 <!-- /JR東日本共通ヘッダー -->
 <!-- メインコンテンツ -->
 <table border="0" cellpadding="0" cellspacing="0" width="600">
